@@ -3098,5 +3098,12 @@ config HUAWEI_DEBUG_MODE
 	depends on HUAWEI_KERNEL
         default n
 	help
-	  in debug mode,you can use sysrq and dump mode 	 
+	  in debug mode,you can use sysrq and dump mode 
+
+config FORCE_FAST_CHARGE
+	bool "Force AC charge mode at will"
+	default y
+	help
+		A simple sysfs interface to force adapters that
+		are detected as USB to charge as AC.	 
 endif
