@@ -18,3 +18,4 @@
 15. Added Governor (Nightmare).
 16. block: added TripNdroid & Fifo io schedulers.
 17. cpufreq: added Governor (Badass).
+18. Added Fast Charge.
